2004-01-13  Rodrigo Moya <rodrigo@ximian.com>

	* providers/groupwise/camel-groupwise-provider.c: missing renaming.

2004-01-13  Sivaiah Nallagatla <snallagatla@novell.com>
	
	* providers/groupwise/camel-gw-listener.[ch] : renamed groupwise-config-listener.[ch] 
	to these file names and also changed code to use CamelURL insted of EUri
	* providers/groupwise/camel-groupwise-provider.c : use the renamed config listener apis
	* providers/groupwise/Makefile.am : changed the source file names 


2004-01-12  Meilof Veeningen  <meilof@wanadoo.nl>

	* providers/nntp/camel-nntp-folder.[ch]: now based on discofolder,
	cache_message and append_message implemented, only retrieve messages
	when we are subscribed, some stubs

	* providers/nntp/camel-nntp-provider.c: newsgroup name display
	settings, password authentication, fix for check_equal where the
	protocols wouldn't be checked

	* providers/nntp/camel-nntp-store.[ch]: base on discostore with
	online/offline support, subscriptions, downloading changed parts of
	the newsgroup list, some stubs, authentication, automatic reconnect

	* providers/nntp/camel-nntp-store-summary.[ch]: NNTP store
	summary based on IMAP code

	* providers/nntp/camel-nntp-summary.c: save summary after xover

	* providers/nntp/camel-nntp-grouplist.h: added CamelNNTPGroupList
	structs

	* providers/nntp/Makefile.am: added store summary

2004-01-12  Not Zed  <NotZed@Ximian.com>

	** See bug 52725.

	* providers/imap/camel-imap-folder.c (get_content): pass in
	transfer encoding when setting up wrapper part.

	* providers/imap/camel-imap-wrapper.c (camel_imap_wrapper_new):
	Added an encoding type parameter, set on data wrapper.

2004-01-10  Jeffrey Stedfast  <fejj@ximian.com>

	* camel-mime-utils.c (rfc2047_encode_word): if e_iconv() returns
	-1, check that errno != EINVAL - if errno *is* EINVAL, it just
	means that our convlen wasn't long enough to include the whole
	sequence. This is fine, we'll just start where we left off next